# FlashChromBert

./: .gitignore  CLAUDE.md  README.md  activate.sh  pyproject.toml
analysis_results/: chrombert.txt  cluster_details.md  tmp_summary.txt
configs/: ch_promoter_full_ddp.yaml  ch_promoter_smoke.yaml  ch_scale_test.yaml  ch_smooth_v1.yaml  ft_promoter_reg.yaml  kmer_legacy.yaml  real_css_4mer.yaml  tiny_css.yaml  tiny_text.yaml
configs/base/: ch_promoter_tuned.yaml  ch_whole_genome_tuned.yaml  ft_promoter_cls.yaml  ft_promoter_cls_random.yaml  ft_promoter_cls_wg.yaml  ft_promoter_reg.yaml
data/: sample.txt
docs/: BACKBONE_DESIGN_DECISION.md  CHROMBERT_ALGORITHM.md  EXPERIMENTS.md  FINETUNE_OPERATIONS.md  LEGACY_MIGRATION.md  PRETRAIN_OPERATIONS.md  pre_process.md  promoter.md
docs/runs/: 2026-04-18_ch_promoter_full_ddp.md  2026-04-18_ch_promoter_tuned.md  2026-04-18_ft_promoter_cls.json  2026-04-18_ft_promoter_reg.json  2026-04-18_ft_promoter_results.md  2026-04-18_validation_fcb.json  2026-04-18_validation_legacy_crm.json  2026-04-18_validation_legacy_genome.json  2026-04-18_validation_legacy_promoter.json  2026-04-18_validation_plan.md  2026-04-18_validation_results.md  2026-04-18_validation_smooth_v1.json
scripts/: batch_finetune.py  batch_finetune_cls.py  batch_finetune_cls_full.py  eval_mlm.py
scripts/motif/: batch_run_motifs.sh  batch_run_reg_motifs.sh  run_motif_analysis.sh  summarize_motifs.py
scripts/utils/: ablation_linear_probe.py  (+4 more)
share_doc/: dataset_scale_analysis.md
tests/: test_data.py  test_kmer_legacy.py  test_model.py  test_smoke.py
(+34 files in other folders)
