[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashchrombert"
version = "0.1.0"
description = "Modern minimal BERT with Flash Attention and PyTorch Lightning. Text first, chromatin state ready."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Qijun Fu" }]

dependencies = [
    "torch>=2.2",
    "lightning>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
# Heavy transitive deps of the verbatim chrombert_utils (flashchrombert.legacy).
# Only install if you actually run the legacy preprocessing pipeline.
legacy = [
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "tslearn>=0.6",
    "umap-learn>=0.5",
    "biopython",
    "logomaker>=0.8",
    "wordcloud>=1.9",
    "stylecloud",
    "statsmodels>=0.14",
    "seqeval>=1.2",
    "pyahocorasick",
    "sentencepiece>=0.1.99",
    "pybedtools>=0.9",
]

[project.scripts]
fcbert-pretrain = "flashchrombert.cli.pretrain:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
